--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,13 +14,15 @@ Orange Color #e67e22
     
 }
 
-html {
+html,
+body {
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
        
 }
 
